# ColorTradutor

./: LICENSE  README.md  app.py  pyproject.toml
