[tool.poetry]
name = "colortradutor"
version = "0.1.0"
description = "ColorTradutor é um projeto Python que oferece uma abordagem visualmente impactante para a tradução de texto. Este aplicativo utiliza a API Google Translate para traduzir o texto fornecido pelo usuário, realçando visualmente as palavras que foram traduzidas. A interface gráfica simples permite que os usuários ingressem texto, acionem a tradução e observem as legendas coloridas abaixo, proporcionando uma experiência interativa e informativa. Explore a interseção entre funcionalidade e estética com o ColorTr"
authors = ["Joao Carlos - PC Online <joao.carlos.dev.log@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
googletrans = "4.0.0-rc1"
html2text = "^2020.1.16"
pillow = "9.5.0"
tkhtmlview = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
